# Cheaters-Never-Win

./: .gitignore  Cargo.toml  README.md  bevy_jam_1.d.ts  bevy_jam_1.js  bevy_jam_1_bg.wasm.d.ts
.cargo/: config.toml
.github/workflows/: ci.yml  ci_build.yml  ci_wasm.yml
data/: chunks.ron
src/: camera.rs  cheat_codes.rs  console.rs  letter_gutter.rs  main.rs  pause_menu.rs  states.rs  stats.rs  tab_menu.rs
src/console/: commands.rs  event.rs  input.rs  loading_screen.rs  mod.rs  ui.rs  utils.rs
src/effects/: mod.rs
src/enemies/: mod.rs
src/game_over/: mod.rs  ui.rs
src/interactables/: chars.rs  mod.rs  terminal.rs
src/main_menu/: mod.rs  ui.rs
src/pause_menu/: button.rs  mod.rs  ui.rs
src/physics/: mod.rs
src/runner/: backgroundlayer.rs  lives_counter.rs  mod.rs  player.rs
src/tab_menu/: first_page.rs  mod.rs  second_page.rs
src/toast/: mod.rs
wasm-page-template/: index.html
