[package]
name = "bevy_jam_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy-inspector-egui = "0.8.2"
rand = "0.8.5"
bevy_ninepatch = "0.6.0"
bevy_tweening = "0.3.2"

# Enabling bevylint
[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]